Advance over views (almost ready) and insertions

--- a/.projections.json
+++ b/.projections.json
@@ -38,6 +38,9 @@
     "tables.sql": {
         "type": "Tables"
     },
+    "data.sql": {
+        "type": "Data"
+    },
     "views.sql": {
         "type": "View"
     }
