Fix stuff, missing data for Movie table

--- a/.projections.json
+++ b/.projections.json
@@ -32,6 +32,9 @@
     "clang-format": {
         "type": "ClangFormat"
     },
+    "*.tex": {
+        "type": "Presentation"
+    },
     "*.sql": {
         "type": "DB2"
     },
